fix: 架构调整
